--- a/camera.html
+++ b/camera.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/homeNav.css">
     <link rel="stylesheet" href="css/index.css">
-    <title> 어썹</title>
+    <title> 카메라 검색</title>
 </head>
 <body>
     <!-- nav -->
@@ -18,10 +18,10 @@
     </header>
     <div class="header_container">
         <h1>
-            <i onClick="location.href='camera.html'" class="garbageSearch">쓰레기 검색</i>   <!--링크 연결 다 바꿔야함-->
-            <i onClick="location.href='froggingBoard.html'" class="froggingBoard">프로깅 게시판</i>
-            <i onClick="location.href='membership.html'" class="membership">회원가입</i>
-            <i onClick="location.href='login.html'" class="login">로그인</i>
+            <i onClick="location.href='index.html'" class="garbageSearch">쓰레기 검색</i>   <!--링크 연결 다 바꿔야함-->
+            <i onClick="location.href='index.html'" class="froggingBoard">프로깅 게시판</i>
+            <i onClick="location.href='index.html'" class="membership">회원가입</i>
+            <i onClick="location.href='index.html'" class="login">로그인</i>
         </h1>
     </div>
     
