--- a/proggingBoard.html
+++ b/proggingBoard.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/proggingNav.css">
     <link rel="stylesheet" href="css/proggingTabel.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <title> 플로깅 게시판</title>
 </head>
 
@@ -18,6 +19,7 @@
                             src="./img/backButton.png"></button>
                     <i onClick="location.href='index.html'" class="topName">플로깅</i>
             </h1>
+            <i class="bi bi-pencil" onClick="location.href='proggingWrite.html'"></i>
         </div>
     </header>
 
@@ -38,7 +40,7 @@
     <main class="main">
         <section class="container">
             <!-- 첫 번째 칸 -->
-            <div class="div">
+            <div class="div"  onClick="location.href='proggingInformation.html'">
                 <div class="img"></div>
                 <div class="information">
                     <h4 class="proggingTitle">도림천에서 플로깅 해요</h4>
