--- a/proggingWrite.html
+++ b/proggingWrite.html
@@ -12,7 +12,7 @@
     <header>
         <div class="nav_container">
             <h1>
-                <p><button onClick="location.href='index.html'" class="backButton">
+                <p><button onClick="location.href='proggingBoard.html'" class="backButton">
                     <img src="./img/backButton.png"></button>
                     <i onClick="location.href='index.html'" class="topName">플로깅 작성</i>
             </h1>
