--- a/login.html
+++ b/login.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/homeNav.css">
     <link rel="stylesheet" href="css/index.css">
-    <title> 로그인</title>
+    <link rel="stylesheet" href="css/login.css">
+
+
+    <title>로그인</title>
 </head>
 <body>
     <!-- nav -->
@@ -19,12 +22,23 @@
     <div class="header_container">
         <h1>
             <i onClick="location.href='camera.html'" class="garbageSearch">쓰레기 검색</i>   
-            <i onClick="location.href='froggingBoard.html'" class="froggingBoard">프로깅 게시판</i>
+            <i onClick="location.href='froggingBoard.html'" class="froggingBoard">플로깅 게시판</i>
             <i onClick="location.href='membership.html'" class="membership">회원가입</i>
             <i onClick="location.href='login.html'" class="login">로그인</i>
         </h1>
     </div>
-    
+
+    <!-- 로고 이미지 -->
+    <div class="logo">로고</div>
+
+    <!-- 아이디 입력창 -->
+    <input type="text" placeholder="아이디" class="input-id">
+    <!-- 비밀번호 입력창 -->
+    <input type="text" placeholder="비밀번호" class="input-pw">
+
+    <!-- 로그인 버튼 -->
+    <button>로그인</button>
+
 </body>
 <script src="js/index.js"></script>
 </html>
